--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign up</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="icon" type="image/x-icon" href="/img/favicon.png">
-    <link href="/styles/styles.css" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="favicon.png">
+    <link href="styles.css" rel="stylesheet">
 </head>
 <body>
     <div class="screen">
